<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">KopAI</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="title_main">KopAI</string>
    <string name="message_welcome_page">Racik Kopi Impianmu</string>
    <string name="title_welcome_page">Welcme to KopAI!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk meracik?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Ayo sharing mengkopi.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="product_maps">Product Maps</string>
    <string name="logout">Logout</string>
    <string name="password_length_error">Password tidak boleh kurang dari 8 karakter</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="title_activity_product_maps">ProductMapsActivity</string>
    <string name="style_parsing_failed">Style parsing failed.</string>
    <string name="can_t_find_style_error">"Can't find style. Error: "</string>
    <string name="failed_to_start_camera">Failed to start camera.</string>
    <string name="can_t_find_any_product_with_location">Can\'t find any product with location.</string>
    <string name="retry">Retry</string>
    <string name="login_success">Anda berhasil login. Ayo sharing product anda!</string>
    <string name="continue_login">Lanjut</string>
    <string name="image_classifier_failed_to_initialize">Image classifier failed to initialize.</string>
    <string name="UI_validation_invalid_email">Email format in invalid</string>
    <string name="text_auth_question_login">Don\'t have account?</string>
    <string name="login_with">Login with</string>
    <string name="text_auth_question_register">Already have account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="date">Date</string>
    <string name="email_sent">Email \nSent</string>
    <string name="password_have_reset">Password have reset \nPlease login...</string>
    <string name="registration_compeleted">Registration \nCompeleted</string>
    <string name="thanka_for_register">Thanka for registration \nPlease login...</string>
    <string name="first_time_in_kopai">First Time \nIn KopAI?</string>
    <string name="we_ll_give_you_a_preferences">We\'ll give you a preferences\nto start!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit</string>
    <string name="username">Ferdi Ananta</string>
    <string name="example_email">example@gmail.com</string>
    <string name="example_date">09/10/2024</string>
    <string name="preferences">Preferences</string>

    <string name="description">Description</string>
    <string name="UI_validation_password_rules">Password must contain at least 8 characters</string>
    <string name="UI_validation_empty_email_password">Email and Password must be filled</string>

    <string name="location">Location</string>
    <string name="location_user">Bandung, Jawa Barat</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_beans">Beans</string>
    <string name="navigation_cart">Cart</string>
    <string name="navigation_profile">Profile</string>
    <string name="detail">Detail</string>
    <string name="favorite">Favorite</string>
    <string name="rate_ph">4.8</string>
    <string name="rate_count_ph">(230)</string>
    <string name="delivery">Delivery</string>
    <string name="size">Size</string>
    <string name="size_100g">100g</string>
    <string name="price_0">Price</string>
    <string name="price_1">Rp 39.999</string>
    <string name="buy">BUY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="shipping">Shipping</string>
    <string name="payment">Payment</string>
    <string name="overview">Overview</string>
    <string name="enter_shipping_details">Enter Shipping Details</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name">Enter Full Name*</string>
    <string name="phone_number">Phone Number</string>
    <string name="_62">+62</string>
    <string name="confirm">Confirm</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="products">Products</string>
    <string name="recommendation">RECOMMENDATION</string>
    <string name="more_products">More Products</string>
    <string name="gender">Gender</string>
    <string name="example_gender">Male</string>
    <string name="phone">Phone</string>
    <string name="example_phone">0812345678</string>
    <string name="address">Address</string>
    <string name="setting">Setting</string>
    <string name="change_password">Change Password</string>
    <string name="button_back">button back</string>
    <string name="birth">Birthday</string>
    <string name="example_address">Jl. Kopi Bermatabat 12</string>
    <string name="new_password">New Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="switch_camera">switch camera</string>
    <string name="shutter_camera">shutter camera</string>
    <string name="gallery">Gallery</string>
    <string name="send">Send</string>
    <string name="select_province">Select Province</string>
    <string name="select_city">Select City</string>
    <string name="enter_address">Enter address</string>
    <string name="postal_code">Postal Code</string>
    <string name="enter_postal_code">Enter postal code</string>
    <string name="field_is_required">%1$s is required</string>
    <string name="camera">Camera</string>
    <string name="pilih_bubuk_kopi_pertama">Pilih Bubuk Kopi Pertama</string>
    <string name="pilih_bubuk_kopi_kedua">Pilih Bubuk Kopi Kedua</string>
    <string name="informasi_bubuk_kopi">Informasi Bubuk Kopi</string>
    <string name="image_coffee">image coffee</string>
    <string name="nama_penerima">Nama penerima :</string>
    <string name="evan_agustian_lukius">Evan Agustian Lukius</string>
    <string name="alamat_1">Jl. Buah Batu No. 250, Bandung, Kota Bandung, Jawa Barat, 42087, (+62)819-1100-8711</string>
    <string name="alamat_lengkap">Alamat Lengkap :</string>
    <string name="jenis_pembayaran">Jenis pembayaran :</string>
    <string name="bca">BCA</string>
    <string name="biaya_pengiriman">Biaya pengiriman :</string>
    <string name="price_2">Rp 15.0000</string>
    <string name="total">Total :</string>
    <string name="pay">PAY</string>
    <string name="berat">Berat</string>
    <string name="gram">.... gram</string>
    <string name="lokasi">Lokasi</string>
    <string name="nanggroe_aceh_darussalam">Nanggroe Aceh Darussalam</string>
    <string name="karakteristik">Karakteristik</string>
    <string name="aroma">Aroma</string>
    >>>>>>> main

    <string-array name="gender_menu">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>

    <string-array name="payment_methods">
        <item>Dana</item>
        <item>Gopay</item>
        <item>ShopeePay</item>
        <item>BCA</item>
    </string-array>
</resources>