<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit Profile"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteX="24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/container_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="55dp"
                android:elevation="8dp"
                android:src="@drawable/avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="205dp"
                android:text="Profile"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:transitionName="auth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@string/edit"
                android:textColor="@color/secondary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:transitionName="auth"
                app:layout_constraintBottom_toBottomOf="@+id/tv_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_profile"/>

            <LinearLayout
                android:id="@+id/container_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="32dp"
                android:gravity="start"
                android:orientation="vertical"
                android:transitionName="misc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_profile">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:transitionName="auth"/>

                <TextView
                    android:id="@+id/tv_name_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/username"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:transitionName="auth"/>

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:transitionName="auth"/>

                <TextView
                    android:id="@+id/tv_email_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/example_email"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:transitionName="auth"/>

                <TextView
                    android:id="@+id/tv_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:transitionName="auth"/>

                <TextView
                    android:id="@+id/tv_gender_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/example_gender"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:transitionName="auth"/>

                <TextView
                    android:id="@+id/tv_birth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/birth"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:transitionName="auth"/>

                <TextView
                    android:id="@+id/tv_birth_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/example_date"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:transitionName="auth"/>

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/phone"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:transitionName="auth"/>

                <TextView
                    android:id="@+id/tv_phone_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/example_phone"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:transitionName="auth"/>

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/address"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:transitionName="auth"/>

                <TextView
                    android:id="@+id/tv_address_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/example_address"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:transitionName="auth"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:text="@string/setting"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:transitionName="auth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/container_profile"/>

            <RelativeLayout
                android:id="@+id/btn_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/custom_border_button"
                android:gravity="center_vertical"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_setting">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/change_password"
                    android:textColor="@color/secondary"
                    app:drawableStartCompat="@drawable/ic_mail"
                    app:drawableTint="@color/secondary"
                    tools:ignore="RelativeOverlap"
                    tools:targetApi="m" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/change_password"
                    android:src="@drawable/ic_arrow_forward"
                    app:tint="@color/secondary" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_preferences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:text="@string/preferences"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:transitionName="auth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_change_password"/>

            <TextView
                android:id="@+id/tv_edit_preferences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@string/edit"
                android:textColor="@color/secondary"
                android:textSize="20sp"
                android:transitionName="auth"
                app:layout_constraintBottom_toBottomOf="@+id/tv_preferences"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_preferences"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_preferences"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="32dp"
                android:nestedScrollingEnabled="false"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_preferences"
                tools:ignore="SpeakableTextPresentCheck"
                tools:itemCount="3"
                tools:listitem="@layout/item_preferences" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="20dp"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:transitionName="action"
                app:backgroundTint="@color/primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_preferences"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>